add jvm parameters