@@ -17,4 +17,7 @@
                  [org.clojure/test.check "1.1.1"]
                  [com.clojure-goes-fast/clj-async-profiler "1.1.1"]]
   :aliases {"slamhound" ["run" "-m" "slam.hound"]}
-  :test-paths ["src" "test"])
+  :test-paths ["src" "test"]
+  :jvm-opts ["-Xmx1g"
+             "-Djdk.attach.allowAttachSelf" ;; for clj-async-profiler
+             "-XX:-OmitStackTraceInFastThrow"])
